# 42sh

./: 42sh  Makefile  README.md  meson.build  test.c  test01.c  test2.c
.github/workflows/: c-cpp.yml
src/: main.c  meson.build
src/AST/: AST.c  AST.h  pretty_printer.c
src/builtin/: builtin.h  exec_bool.c  exec_break_continue.c  exec_cd.c  exec_dot.c  exec_echo.c  exec_echo.h  exec_exit.c  exec_export.c  exec_pipe.c  exec_redirection.c  exec_unset.c
src/commons/: commons.c  commons.h  commons_argv.c  commons_status.c
src/evalexpr/: evalexpr.c  evalexpr.h  evalexpr_ast.h  evaluate.c  fifo.c  fifo.h  lifo.c  lifo.h  parser.c
src/execution/: exec_assignment.c  exec_case.c  exec_condition.c  exec_echo.c  exec_echo.h  exec_function.c  exec_here_doc.c  exec_operator.c  exec_pipe.c  exec_redirection.c  exec_subshell.c  execution.c  execution.h  variables.c  variables.h
src/expansion/: expansion.c  expansion.h
src/functions/: functions.c  functions.h
src/garbage_collector/: garbage_collector.c  garbage_collector.h  gc_strdup.c
src/input_printer/: input_printer.c  input_printer.h
src/io_backend/: io_backend.c  io_backend.h
src/kernel/: kernel.c  kernel.h  launch_options.h
src/lexer/: lexer.c  lexer.h
src/linked_list/: add_list.c  linked_list.c  linked_list.h
src/option_parser/: option_parser.c  option_parser.h
src/parser/: and_or_rule.c  assignment_word_rule.c  case_rule.c  command_rule.c  compound_list_rule.c  element_rule.c  else_rule.c  for_rule.c  funcdec_rule.c  if_rule.c  input_rule.c  list_rule.c  parser.c  parser.h  parsing_tools.c  parsing_tools.h  pipeline_rule.c  prefix_rule.c  redirection_rule.c  rules.h  shell_command_rule.c  simple_command_rule.c  substitution_rule.c  until_rule.c  while_rule.c
src/symbol/: symbol.c  symbol.h
src/token/: token.c  token.h
tests/: test02.c
tests/exec_bool/: test01.c  test02.c
tests/exec_break_continue/: command.txt
tests/exec_case/: test01.c  test02.c  test03.c
tests/exec_cond/: test01.c  test02.c  test03.c  test04.c  test05.c
tests/exec_echo/: test01.c  test02.c  test03.c  test04.c  test05.c  test06.c  test07.c
tests/exec_here_doc/: test01.c  test02.c  test03.c
tests/exec_pipe/: test01.c  test02.c  test03.c
tests/exec_redirection/: script.sh  test00.c  test01.c  test02.c  test03.c  test04.c  test05.c  test06.c  test07.c  test08.c  test09.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c
tests/exec_subshell/: test01.c
tests/exec_var/: test01.c
tests/exec_while/: test01.c
tests/expansion/: test01.c
tests/global_test_suite/: file_with_command.txt  script.py  tests.txt  testsuite.sh
tests/io_backend/: file_to_get_content_01  main_test.c  test01.c  testmain.c  testmain2.c
tests/lexer/: test0.c  test01.c  test02.c  test03.c  test04.c  test05.c
tests/option_parser/: test01.c  test02.c
tests/parser/: test01.c  test02.c  test03.c  test04.c  test05.c  test06.c  test07.c  test08.c
tests/testing_tools/: test01.c
tests/var/: test01.c
