src = files( 
  'main.c',
  'option_parser/option_parser.c',
  'linked_list/linked_list.c',
  'kernel/kernel.c',
  'parser/parser.c',
  'execution/execution.c',
  'execution/variables.c',
  'commons/commons.c',
  'AST/AST.c',
  'lexer/lexer.c',
  'builtin/exec_bool.c',
  'builtin/exec_redirection.c',
  'builtin/exec_pipe.c',
  'builtin/exec_echo.c',
  'io_backend/io_backend.c',
  'token/token.c'
  )
