src = files( 
	'main.c',
    'garbage_collector/garbage_collector.c',
	'option_parser/option_parser.c',
	'linked_list/linked_list.c',
	'kernel/kernel.c',
	'parser/while_rule.c',
	'parser/else_rule.c',
	'parser/simple_command_rule.c',
	'parser/command_rule.c',
	'parser/and_or_rule.c',
	'parser/parsing_tools.c',
	'parser/list_rule.c',
	'parser/prefix_rule.c',
	'parser/compound_list_rule.c',
	'parser/element_rule.c',
	'parser/input_rule.c',
	'parser/parser.c',
	'parser/redirection_rule.c',
	'parser/if_rule.c',
	'parser/shell_command_rule.c',
	'parser/until_rule.c',
    'parser/for_rule.c',
	'parser/pipeline_rule.c',
    'parser/assignment_word_rule.c',
	'execution/execution.c',
	'expansion/expansion.c',
	'commons/commons.c',
	'AST/AST.c',
    'AST/pretty_printer.c',
	'lexer/lexer.c',
	'builtin/exec_pipe.c',
	'builtin/exec_bool.c',
	'builtin/exec_redirection.c',
	'builtin/exec_echo.c',
	'builtin/exec_break_continue.c',
	'io_backend/io_backend.c',
	'token/token.c',
)
