src = files( 
	'main.c',
    'garbage_collector/garbage_collector.c',
    'garbage_collector/gc_strdup.c',
	'option_parser/option_parser.c',
	'linked_list/linked_list.c',
	'kernel/kernel.c',
	'parser/while_rule.c',
	'parser/else_rule.c',
	'parser/simple_command_rule.c',
	'parser/command_rule.c',
	'parser/and_or_rule.c',
	'parser/parsing_tools.c',
	'parser/list_rule.c',
	'parser/prefix_rule.c',
	'parser/compound_list_rule.c',
	'parser/element_rule.c',
	'parser/input_rule.c',
	'parser/parser.c',
	'parser/redirection_rule.c',
	'parser/if_rule.c',
	'parser/shell_command_rule.c',
	'parser/until_rule.c',
    'parser/for_rule.c',
	'parser/pipeline_rule.c',
    'parser/assignment_word_rule.c',
    'parser/funcdec_rule.c',
    'parser/substitution_rule.c',
	'execution/execution.c',
	'execution/exec_condition.c',
	'execution/exec_subshell.c',
	'execution/exec_assignment.c',
	'execution/exec_operator.c',
	'execution/exec_redirection.c',
	'execution/exec_pipe.c',
	'execution/exec_function.c',
    'expansion/expansion.c',
    'functions/functions.c',
	'commons/commons.c',
	'commons/commons_argv.c',
	'commons/commons_status.c',
	'AST/AST.c',
    'AST/pretty_printer.c',
    'input_printer/input_printer.c',
	'lexer/lexer.c',
    'symbol/symbol.c',
	'builtin/exec_bool.c',
	'builtin/exec_echo.c',
	'builtin/exec_cd.c',
	'builtin/exec_exit.c',
	'builtin/exec_dot.c',
	'builtin/exec_break_continue.c',
	'io_backend/io_backend.c',
	'token/token.c',
)
